--- a/Nft-App/public/css/app.css
+++ b/Nft-App/public/css/app.css
@@ -10019,14 +10019,6 @@ h3 {
     border-color: #dee2e6;
   }
 }
-.sidebar {
-  color: red;
-}
-
-.body {
-  color: blue;
-}
-
 .pagination {
   justify-content: center;
 }
@@ -10034,10 +10026,6 @@ h3 {
 .page-link:hover {
   background-color: #dcdcdc;
   color: #000000;
-}
-
-.page-item:target {
-  border: none;
 }
 
 .page-item.active .page-link {
@@ -10051,4 +10039,37 @@ h3 {
   border-radius: 10%;
   margin: 0px 2px;
   color: #000000;
+  box-shadow: none !important;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow, 0.3s;
+}
+
+.collection p {
+  font-size: 13px;
+}
+
+.collection p:hover {
+  color: black;
+  cursor: pointer;
+}
+
+.collection {
+  font-size: 12px;
+  color: #707a83;
+}
+.collection .token {
+  max-height: 11px;
+}
+
+.form-control:focus, search {
+  border-color: #dcdcdc;
+}
+
+.search {
+  box-shadow: none !important;
 }
