--- a/Nft-App/resources/sass/app.scss
+++ b/Nft-App/resources/sass/app.scss
@@ -7,14 +7,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.sidebar {
-    color:red;
-}
-
-.body {
-    color: blue;
-}
-
 .pagination {
     justify-content: center;
 }
@@ -22,10 +14,6 @@
 .page-link:hover {
     background-color: #dcdcdc;
     color: #000000;
-}
-
-.page-item:target {
-    border: none;
 }
 
 .page-item.active .page-link {
@@ -39,4 +27,38 @@
     border-radius: 10%;
     margin: 0px 2px;
     color: #000000;
+    box-shadow: none !important;
+}
+
+.card:hover{
+    transform: scale(1.03);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+    cursor: pointer;
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s;
+}
+
+.collection p {
+    font-size: 13px;
+}
+
+.collection p:hover {
+    color: black;
+    cursor: pointer;
+}
+
+.collection {
+    font-size: 12px;
+    color: rgb(112, 122, 131);
+
+    .token {
+        max-height: 11px;
+    }
+}
+
+.form-control:focus, search {
+    border-color: #dcdcdc;
+}
+
+.search {
+    box-shadow: none !important;
 }
