--- a/Nft-App/public/css/app.css
+++ b/Nft-App/public/css/app.css
@@ -10019,34 +10019,15 @@ h3 {
     border-color: #dee2e6;
   }
 }
-.pagination {
-  justify-content: center;
-}
-
-.page-link:hover {
-  background-color: #dcdcdc;
-  color: #000000;
-}
-
-.page-item.active .page-link {
-  color: #000000;
-  background-color: #dcdcdc;
-  border: none;
-}
-
-.page-link {
-  border: none;
-  border-radius: 10%;
-  margin: 0px 2px;
-  color: #000000;
-  box-shadow: none !important;
-}
-
 .card:hover {
   transform: scale(1.03);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   cursor: pointer;
   transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow, 0.3s;
+}
+
+.card-body {
+  font-size: 9px;
 }
 
 .collection p {
@@ -10068,6 +10049,29 @@ h3 {
 
 .form-control:focus, search {
   border-color: #dcdcdc;
+}
+
+.pagination {
+  justify-content: center;
+}
+
+.page-link:hover {
+  background-color: #dcdcdc;
+  color: #000000;
+}
+
+.page-item.active .page-link {
+  color: #000000;
+  background-color: #dcdcdc;
+  border: none;
+}
+
+.page-link {
+  border: none;
+  border-radius: 10%;
+  margin: 0px 2px;
+  color: #000000;
+  box-shadow: none !important;
 }
 
 .search {
