--- a/Nft-App/resources/sass/app.scss
+++ b/Nft-App/resources/sass/app.scss
@@ -7,34 +7,15 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.pagination {
-    justify-content: center;
-}
-
-.page-link:hover {
-    background-color: #dcdcdc;
-    color: #000000;
-}
-
-.page-item.active .page-link {
-    color: #000000;
-    background-color: #dcdcdc;
-    border: none;
-}
-
-.page-link {
-    border: none;
-    border-radius: 10%;
-    margin: 0px 2px;
-    color: #000000;
-    box-shadow: none !important;
-}
-
 .card:hover{
     transform: scale(1.03);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
     cursor: pointer;
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s;
+}
+
+.card-body {
+    font-size: 9px;
 }
 
 .collection p {
@@ -57,6 +38,29 @@
 
 .form-control:focus, search {
     border-color: #dcdcdc;
+}
+
+.pagination {
+    justify-content: center;
+}
+
+.page-link:hover {
+    background-color: #dcdcdc;
+    color: #000000;
+}
+
+.page-item.active .page-link {
+    color: #000000;
+    background-color: #dcdcdc;
+    border: none;
+}
+
+.page-link {
+    border: none;
+    border-radius: 10%;
+    margin: 0px 2px;
+    color: #000000;
+    box-shadow: none !important;
 }
 
 .search {
