--- a/Nft-App/resources/sass/app.scss
+++ b/Nft-App/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+.asset-address {
+    font-size: 9px;
+}
+
 .card:hover{
     transform: scale(1.03);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
@@ -14,8 +18,8 @@
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s;
 }
 
-.card-body {
-    font-size: 9px;
+.card-title {
+    font-size: 16px;
 }
 
 .collection p {
